# schoology-ics

./: .gitignore  README.md  launch.sh  pyproject.toml  requirements.txt
resources/: schoology_cache.json  user_data.json
src/: config.py  ical_helpers.py  main.py  manual_mark_helpers.py  schoology_api_helpers.py  utils.py  utils_custom_events.py
src/static/: globals.css
src/templates/: base.html  custom.html  custom_edit.html  error.html  home.html  mark_overdue.html  ok.html  refresh_item_map.html  settings.html
